# trading

./: .env.example  .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/app/: cli.py  config.py  db.py  main.py
backend/app/ai/: chat.py  tools.py
backend/app/api/: account.py  alerts.py  briefing.py  chat.py  decisions.py  events.py  health.py  options.py  position_analysis.py  quotes.py  suggestions.py  sync.py  system.py  trades.py  ws.py
backend/app/longbridge/: client.py  mock_data.py  options.py  realtime.py  sync.py
backend/app/models/: __init__.py  account.py  alert.py  daily_baseline.py  decision.py  event_notification.py  execution.py  order.py  position.py  position_analysis_report.py  suggestion.py  sync_log.py
backend/app/schemas/: account.py  alert.py  common.py  (+7 more)
backend/data/: trading.db-shm
backend/scripts/: analyze_trades.py  check_prev_close.py  debug_intw.py  eval_debate.py  test_day_pnl_baseline.py  test_integration.py  test_intw_quote.py  test_nasdaq_api.py  test_overnight_quote.py  watch_msft.py
backend/tests/: conftest.py  test_config.py  test_debate_escalation.py  test_debate_queue.py  test_debate_research.py  test_debate_scorer.py  test_event_notification_model.py  test_hourly_position_analysis_worker.py  test_jin10_escalation.py  test_macro_pusher_escalation.py  test_option_valuation.py  test_pending_ipo.py  test_position_analysis.py  test_position_analysis_api.py  test_position_analysis_model.py  test_sdk_datetime.py  test_suggestion_debate.py  test_suggestion_model.py  test_suggestions.py  test_suggestions_worker.py
(+70 files in other folders)
